force-app/main/default/objects/Item__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile Devices</fullName>
            </value>
            <value>
                <fullName>Computing</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>